[package]
name = "kboot"
version = "0.1.0"
edition = "2018"
authors = ["Kees van Voorthuizen <me@keesvv.nl>"]

[build]
target = "build/x86_64-kboot.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

[dependencies]
